style.css
/* ... */
.comment-body {
	margin-left: 0px;
	margin-bottom: 40px;
}

.comment-author {
	line-height: 48px;
	font-size: 16px;
	font-weight: bold;
}

.comment-author cite {
	font-style: normal;
}

ul.children .comment-author {
	line-height: 32px;
	margin-bottom: 10px;
}

.comment-author .fn a {
	text-decoration: none;
}

.comment-author .says,
.pingback .says,
.pingback .comment-meta,
.pingback .reply,
.pingback p {
	display: none;
}

.pingback cite {
	position: relative;
}

.pingback cite::before {
	content: "Ping!";
	position: absolute;
	left: -31px;
	font-size: 10px;
	color: #999;
	-webkit-transform: rotate(-45deg);
	-moz-transform: rotate(-45deg);
	-o-transform: rotate(-45deg);
	-ms-transform: rotate(-45deg);
}

.form-allowed-tags {
	display: none;
}

.bypostauthor {
}

/* =Widgets
----------------------------------------------- */

.widget {
	margin: 0 0 1.5em;
}

/* Search widget */
#searchsubmit {
	display: none;
}

/* =Layout
----------------------------------------------- */

body {
	font: 15px "Helvetica Neue", Helvetica, Arial, sans-serif;
	font-weight: 300;
	line-height: 1.6;
	color: #222;
}

.site-title a {
	color: inherit;
	text-decoration: none;
}

.site-title {
	line-height: 1.2;
	font-size: 18px;
	margin: 10px 0 0 0;
}

.site-description {
	color: #999;
	font-weight: 300;
	font-size: 13px;
	margin: 10px 0 20px 0;
}

.main-navigation ul,
#secondary ul {
	list-style: none;
	padding: 0;
	margin: 0;
}

.main-navigation li,
#secondary li {
	display: block;
	width: 100%;
	margin: 0;
	padding: 0;
}

.main-navigation a,
#secondary ul li a {
	padding: 2px 0px;
	text-decoration: none;
	display: block;
}

#secondary .widget-title {
	font-size: 15px;
}

.main-navigation li.current-menu-item a,
.main-navigation li.current_page_item a {

}

#nav-above {
	display: none;
}

#nav-below {
	margin-top: 20px;
}

h1, h2, h3, h4, h5, h6 {
	font-weight: bold;
	margin: 20px 0;
}

h1 {
	font-size: 22px;
}

h2 {
	font-size: 16px;
}

h3 {
	font-size: 13px;
	color: #666;
}

h4, h5, h6 {
	font-weight: 300;
}

#main article {
	padding: 10px 0 40px 0;
	border-bottom: solid 1px #ddd;
}

#main article.comment {
	border-bottom: none;
}

.entry-title a {
	color: inherit;
	text-decoration: none;
}

.entry-title a:hover {
	color: #26ADE4;
}

.entry-meta,
.entry-meta a {
	color: #999;
	font-size: 12px;
}

.entry-meta a:hover {
	color: #26ADE4;
}

#page {
	width: 750px;
	margin: 60px auto;
}

#masthead {
	float: left;
	width: 24%;
	margin-top: 34px;
	margin-bottom: 40px;
}

.site-content,
#colophon {
	float: right;
	width: 70%;
}

#content {

}
#secondary { /* Sidebar 1 */
	clear: left;
	float: left;
	overflow: hidden;
	width: 24%;
}
#tertiary { /* Sidebar 2 */
	clear: left;
}
.site-footer {
	clear: both;
	margin-top: 40px;
	margin-bottom: 40px;
}

.site-footer,
.site-footer a {
	font-size: 13px;
	color: #999;
}

.site-footer a:hover {
	color: #26ADE4;
}

table td {
	padding: 4px 0;
	font-weight: 300;
	border-bottom: solid 1px #eee;
}

table th {
	padding: 4px 0;
	border-bottom: solid 1px #ccc;
}

.format-aside h1.entry-title,
.format-quote h1.entry-title,
.format-chat h1.entry-title,
.format-status h1.entry-title,
.format-image h1.entry-title,
.format-link h1.entry-title { font-size: 13px; line-height: 21px; }
.format-aside h1.entry-title::before { content: "Aside: "; color: #999; font-weight: 300; }
.format-quote h1.entry-title::before { content: "Quote: "; color: #999; font-weight: 300; }
.format-status h1.entry-title::before { content: "Status: "; color: #999; font-weight: 300; }
.format-link h1.entry-title::before { content: "Link: "; color: #999; font-weight: 300; }
.format-image h1.entry-title::before { content: "Image: "; color: #999; font-weight: 300; }


.entry-content .twitter-tweet-rendered {
    max-width: 100% !important;
}

/* iPads (landscape) ----------- */
@media only screen and (max-width : 900px)
 {
/* Styles */

	#page {
		width: auto;
		padding: 40px;
		margin: 0 auto;
		position: relative;
	}

	#masthead,
	.site-content,
	#colophon {
		width: 100%;
	}

	#masthead {
		margin-top: 0;
	}

	.site-title,
	.site-description {
		margin-left: 70px;
		clear: none;
	}

	.site-logo,
	.site-logo img {
		float: left;
		width: 50px;
		height: 50px;
	}

	.main-navigation {
		padding-top: 20px;
		width: auto;
		clear: none;
		margin-left: -10px;
	}

	.main-navigation li {
		display: inline-block;
		width: auto;
		padding: 5px 10px;
	}

	/* Small Navigation */
	.main-small-navigation {
		position: absolute;
		top: 0;
		left: 0;
		background: #F2F7F9;
		border-bottom: solid 1px #DDD;
		width: 100%;
	}

	.main-small-navigation ul {
		list-style: none;
		margin: 0;
		padding: 0;
	}

	.main-small-navigation a {
		display: block;
		padding: 10px 40px;
		border-top: solid 1px #ddd;
	}

	.main-small-navigation .menu-toggle {
		font-size: 14px;
		margin: 0;
		padding: 10px 40px;
	}

	.main-small-navigation .menu-toggle:before {
		content: '\2261';
		margin-left: -20px;
		margin-right: 10px;
	}

	.main-small-navigation .menu-toggle.toggled-on {
		background: white;
	}
}

@media only screen and (max-width : 600px) {
	#masthead {
		margin-top: 40px;
	}
}

/* iPads (portrait) ----------- */
@media only screen 
and (min-device-width : 768px) 
and (max-device-width : 1024px) 
and (orientation : portrait) {
/* Styles */
}

